--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,10 @@
+# Experience template
 - layout: left
-  company: The Boring Company
-  link: boringcompany.com
-  job_title: Senior Network System Administrator
-  dates: November 2017 - Present
+  company: Company name
+  link: Link to company (optional)
+  job_title: Job title
+  dates: Date Range (eg. November 2016 - present)
   quote: >
-   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+   Short description of the company (optional)
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    Description of role
