--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ phone:
 website: 
 
 # Social links
-twitter_username: jekyllrb
+twitter_username: 
 github_username:  miguelcastillon
 dribbble_username: jekyll
 facebook_username: jekyll
