No social media

--- a/_config.yml
+++ b/_config.yml
@@ -12,15 +12,15 @@ website:
 # Social links
 twitter_username:
 github_username:  miguelcastillon
-dribbble_username: jekyll
-facebook_username: jekyll
-flickr_username: jekyll
-instagram_username: jekyll
-linkedin_username: jekyll
-xing_username: jekyll
-pinterest_username: jekyll
-youtube_username: jekyll
-googleplus_username: +jekyll
+dribbble_username:
+facebook_username:
+flickr_username:
+instagram_username:
+linkedin_username:
+xing_username:
+pinterest_username:
+youtube_username:
+googleplus_username:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
