--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ googleplus_username:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_profile_image: images/profile.png
 about_content: | # this will include new lines to allow paragraphs
   Hello, I'm Miguel
 
