--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,7 +2,7 @@
 - layout: left
   name: KU Leuven (Belgium)
   dates: 09 / 2016 - 07 / 2018
-  qualification: MSc in Mechanical Engineering: Robotics & Mechatronics
+  qualification: MSc in Mechanical Engineering: Robotics and Mechatronics
   #quote: >
 #    Short institution or course description (optional)
   description: | # this will include new lines to allow paragraphs
