--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ repository: miguelcastillon/miguelcastillon.github.io
 name: Miguel Castillón
 title: PhD student at University of Girona
 email: mcastillonsanchez@gmail.com
-phone: 
-website: 
+phone:
+website:
 
 # Social links
 twitter_username:
@@ -16,7 +16,7 @@ dribbble_username:
 facebook_username:
 flickr_username:
 instagram_username:
-linkedin_username:
+linkedin_username: "miguel-castillon"
 xing_username:
 pinterest_username:
 youtube_username:
